package com.kedacom.vconf.sdk.common.type.transfer;

public class TSrvKeepLiveInfo {
    public String achSysalias;
    public int dwMtAid;
    public int dwTime;
}