package com.kedacom.vconf.sdk.common.type.transfer;

import com.kedacom.vconf.sdk.common.type.BaseTypeBool;

/**
 * Created by Sissi on 2019/7/30
 */
public class TSrvStartResult {
    public BaseTypeBool MainParam;
    public TSrvKeepLiveInfo AssParam;
}
