package com.kedacom.vconf.sdk.main.startup.bean.transfer;

/**
 * Created by Sissi on 2019/7/30
 */
public class MTCLoginResult {
}
