@startuml

title __TRANSFER's Class Diagram__\n

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          enum EmMtModel {
            END
            em300L_1080P30_Api
            em300L_720P60_Api
            em300L_oem_1080P30_Api
            em300_1080P30_Api
            em300_720P60_Api
            em300_oem_1080P30_Api
            emH950_1080P60
            emModelBegin
            emSkyAndroidPad
            emSkyAndroidPad_s_Api
            emSkyAndroidPhone
            emSkyAndroidPhone_s_Api
            emSkyIPad
            emSkyIPhone
            emSkyWindows
            emTrueLink
            emTrueLinkTV_Api
            emTrueTouchAndroidPad
            emTrueTouchAndroidPhone
            emTrueTouchIpad
            emTrueTouchIphone
            emX300_1080P30_Api
            emX300_1080P60_Api
            emX300_720P60_Api
            emX300_oem_1080P60_Api
            emX500_1080P30
            emX500_1080P60
            emX500_1080P_30_Api
            emX500_1080P_60_Api
            emX500_4k30_Api
            emX500_720P60
            emX500_mo_1080P
            emX500_mo_720P
            emX500_oem_1080P
            emX500_oem_1080P_60_Api
            emX500_oem_4k30_Api
            emX500_oem_mo_1080P
            emX700_4k30_Api
            emX700_oem_4k30_Api
            value
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          enum EmNetTransportType {
            E1
            EthnetCard1
            EthnetCard2
            MobileData
            None
            PPPoE
            Wifi
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          enum EmResourceType {
            emResourceType_LimitPR_Api
            emResourceType_LimitP_Api
            emResourceType_None_Api
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.MTCLoginResult {
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.TApsLoginResult {
              + achVersion : String
              + bSucess : boolean
              + dwApsErroce : int
              + dwHttpErrcode : int
              + dwIP : long
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.TMTApsLoginParam {
              + achModelName : String
              + achOemInfo : String
              + achPassword : String
              + achSoftwareVer : String
              + achUsername : String
              + TMTApsLoginParam()
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.TNetWorkInfo {
              + dwDns : int
              + dwDnsBackup : int
              + dwGateway : int
              + dwIp : int
              + dwMask : int
              + TNetWorkInfo()
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.TSrvKeepLiveInfo {
              + achSysalias : String
              + dwMtAid : int
              + dwTime : int
          }
        }
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.main {
    namespace startup {
      namespace bean {
        namespace transfer {
          class com.kedacom.vconf.sdk.main.startup.bean.transfer.TSrvStartResult {
              + MainParam : BaseTypeBool
          }
        }
      }
    }
  }
  

  com.kedacom.vconf.sdk.main.startup.bean.transfer.TApsLoginResult o-- com.kedacom.vconf.sdk.main.startup.bean.transfer.EmResourceType : emResourceType
  com.kedacom.vconf.sdk.main.startup.bean.transfer.TNetWorkInfo o-- com.kedacom.vconf.sdk.main.startup.bean.transfer.EmNetTransportType : emUsedType
  com.kedacom.vconf.sdk.main.startup.bean.transfer.TSrvStartResult o-- com.kedacom.vconf.sdk.main.startup.bean.transfer.TSrvKeepLiveInfo : AssParam


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
